2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: bsp_cleanup() was wrong. Use stub. openpic.h not needed.
	* startup/bspclean.c: Removed.

2008-09-30	Jennifer Averett <jennifer.averett@oarcorp.com>

	* Makefile.am, preinstall.am, PCI_bus/universe.c, console/console.c,
	include/bsp.h, irq/FPGA.c, irq/irq.c, startup/Hwr_init.c,
	startup/bspstart.c, startup/vmeintr.c: Modifications required to run
	on hardware. Some cleanup.
	* include/irq-config.h: New file.
	* startup/spurious.c: Removed.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove noinst_PROGRAMS (Unused).

2008-09-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* preinstall.am: Regenerated.

2008-09-06	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq/irq.c: Convert to "bool".

2008-09-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/85c30.c, console/console.c, irq/FPGA.c, timer/timer.c,
	tod/tod.c: Convert to "bool".

2008-09-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, README, configure.ac, console/85c30.c,
	console/console.c, console/consolebsp.h, include/bsp.h,
	include/gen2.h, irq/FPGA.c, irq/irq.c, irq/irq.h, irq/irq_init.c,
	start/start.S, startup/bspstart.c, startup/genpvec.c,
	startup/linkcmds, timer/timer.c, tod/tod.c: Initiate update and
	testing. Runs hello but does not run ticker yet.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate empty function from every benchmark timer
	driver. Fix spelling.

2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Rename timer driver methods to follow RTEMS
	programming conventions.

2008-08-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* irq/FPGA.c, irq/irq_init.c, pci/no_host_bridge.c,
	startup/Hwr_init.c, startup/genpvec.c:
	Add missing prototypes.

2008-07-03	Chris Johns <chrisj@rtems.org>
